// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card UI Styles: idle 1`] = `
"<timer-bar-card hass=\\"[object Object]\\">
  <ha-card outlined=\\"false\\">
    <slot></slot>
    <div class=\\"card-content\\">
      <timer-bar-entity-row config=\\"[object Object]\\" hass=\\"[object Object]\\">
        <div class=\\"generic-entity-row\\">
          <state-badge _showIcon=\\"true\\" class=\\"pointer\\" stateObj=\\"[object Object]\\" tabindex=\\"0\\">
            <ha-state-icon data-state=\\"idle\\">…</ha-state-icon>
          </state-badge>
          <div class=\\"info pointer\\" title=\\"test2\\">
            test2
          </div>
          <div class=\\"text-content\\">
            Idle
          </div>
        </div>
      </timer-bar-entity-row>
      <timer-bar-entity-row config=\\"[object Object]\\" hass=\\"[object Object]\\">
        <div class=\\"generic-entity-row\\">
          <state-badge _showIcon=\\"true\\" class=\\"pointer\\" stateObj=\\"[object Object]\\" tabindex=\\"0\\">
            <ha-state-icon data-state=\\"idle\\">…</ha-state-icon>
          </state-badge>
          <div class=\\"info pointer\\" title=\\"test3\\">
            test3
          </div>
          <div class=\\"text-content\\">
            Idle
          </div>
        </div>
      </timer-bar-entity-row>
    </div>
  </ha-card>
</timer-bar-card>
"
`;

exports[`Card UI Styles: paused 1`] = `
"<timer-bar-card hass=\\"[object Object]\\">
  <ha-card outlined=\\"false\\">
    <slot></slot>
    <div class=\\"card-content\\">
      <timer-bar-entity-row config=\\"[object Object]\\" hass=\\"[object Object]\\">
        <div class=\\"generic-entity-row\\">
          <state-badge _showIcon=\\"true\\" class=\\"pointer\\" stateObj=\\"[object Object]\\" tabindex=\\"0\\">
            <ha-state-icon data-state=\\"paused\\">…</ha-state-icon>
          </state-badge>
          <div class=\\"info pointer\\" title=\\"test2\\">
            test2
          </div>
          <div class=\\"pointer status\\">
            Paused
          </div>
          <div class=\\"text-content\\">
            1:58
          </div>
        </div>
      </timer-bar-entity-row>
      <timer-bar-entity-row config=\\"[object Object]\\" hass=\\"[object Object]\\">
        <div class=\\"generic-entity-row\\">
          <state-badge _showIcon=\\"true\\" class=\\"pointer\\" stateObj=\\"[object Object]\\" tabindex=\\"0\\">
            <ha-state-icon data-state=\\"idle\\">…</ha-state-icon>
          </state-badge>
          <div class=\\"info pointer\\" title=\\"test3\\">
            test3
          </div>
          <div class=\\"text-content\\">
            Idle
          </div>
        </div>
      </timer-bar-entity-row>
    </div>
  </ha-card>
</timer-bar-card>
"
`;

exports[`Card UI Styles: running 1`] = `
"<timer-bar-card hass=\\"[object Object]\\">
  <ha-card outlined=\\"false\\">
    <slot></slot>
    <div class=\\"card-content\\">
      <timer-bar-entity-row config=\\"[object Object]\\" hass=\\"[object Object]\\">
        <div class=\\"generic-entity-row\\">
          <state-badge _showIcon=\\"true\\" class=\\"pointer\\" stateObj=\\"[object Object]\\" tabindex=\\"0\\">
            <ha-state-icon data-state=\\"active\\">…</ha-state-icon>
          </state-badge>
          <div class=\\"info pointer\\" title=\\"test2\\">
            test2
          </div>
          <div class=\\"bar-container pointer\\">
            <div class=\\"bar\\">
              <div></div>
            </div>
          </div>
          <div class=\\"text-content\\">
            1:59
          </div>
        </div>
      </timer-bar-entity-row>
      <timer-bar-entity-row config=\\"[object Object]\\" hass=\\"[object Object]\\">
        <div class=\\"generic-entity-row\\">
          <state-badge _showIcon=\\"true\\" class=\\"pointer\\" stateObj=\\"[object Object]\\" tabindex=\\"0\\">
            <ha-state-icon data-state=\\"idle\\">…</ha-state-icon>
          </state-badge>
          <div class=\\"info pointer\\" title=\\"test3\\">
            test3
          </div>
          <div class=\\"text-content\\">
            Idle
          </div>
        </div>
      </timer-bar-entity-row>
    </div>
  </ha-card>
</timer-bar-card>
"
`;

exports[`Entity Row Styles: idle 1`] = `
"<timer-bar-card hass=\\"[object Object]\\">
  <timer-bar-entity-row config=\\"[object Object]\\" hass=\\"[object Object]\\">
    <div class=\\"generic-entity-row\\">
      <state-badge _showIcon=\\"true\\" class=\\"pointer\\" stateObj=\\"[object Object]\\" tabindex=\\"0\\">
        <ha-state-icon data-state=\\"idle\\">…</ha-state-icon>
      </state-badge>
      <div class=\\"info pointer\\" title=\\"test1\\">
        test1
      </div>
      <div class=\\"text-content\\">
        Idle
      </div>
    </div>
  </timer-bar-entity-row>
</timer-bar-card>
"
`;

exports[`Entity Row Styles: paused 1`] = `
"<timer-bar-card hass=\\"[object Object]\\">
  <timer-bar-entity-row config=\\"[object Object]\\" hass=\\"[object Object]\\">
    <div class=\\"generic-entity-row\\">
      <state-badge _showIcon=\\"true\\" class=\\"pointer\\" stateObj=\\"[object Object]\\" tabindex=\\"0\\">
        <ha-state-icon data-state=\\"paused\\">…</ha-state-icon>
      </state-badge>
      <div class=\\"info pointer\\" title=\\"test1\\">
        test1
      </div>
      <div class=\\"pointer status\\">
        Paused
      </div>
      <div class=\\"text-content\\">
        58
      </div>
    </div>
  </timer-bar-entity-row>
</timer-bar-card>
"
`;

exports[`Entity Row Styles: running 1`] = `
"<timer-bar-card hass=\\"[object Object]\\">
  <timer-bar-entity-row config=\\"[object Object]\\" hass=\\"[object Object]\\">
    <div class=\\"generic-entity-row\\">
      <state-badge _showIcon=\\"true\\" class=\\"pointer\\" stateObj=\\"[object Object]\\" tabindex=\\"0\\">
        <ha-state-icon data-state=\\"active\\">…</ha-state-icon>
      </state-badge>
      <div class=\\"info pointer\\" title=\\"test1\\">
        test1
      </div>
      <div class=\\"bar-container pointer\\">
        <div class=\\"bar\\">
          <div></div>
        </div>
      </div>
      <div class=\\"text-content\\">
        59
      </div>
    </div>
  </timer-bar-entity-row>
</timer-bar-card>
"
`;
